objects/project_cloud__Project_Task__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Subscriptions__c</fullName>
        <description>A Count of the number of subscriptions on the Project Task</description>
        <label>Subscriptions</label>
        <summaryFilterItems>
            <field>project_cloud__Total_Allocation__c.project_cloud__Subscribed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>project_cloud__Total_Allocation__c.project_cloud__Project_Task__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Task_Number__c</fullName>
        <description>Auto Number field for uniquely identifying Project Tasks. This value is also appended to the Project Task Name for searching.</description>
        <displayFormat>T-{00000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Auto number for the Project Task that is appending to the Project Task name to make it unique</inlineHelpText>
        <label>Project Task Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>project_cloud__Units__c</fullName>
        <description>The unit type of the Project Task (Estimated Hours or Calendar Allocation).
The value of this field is copied from the value of the Project when the task is created (by the ProjectTaskConfiguration trigger) and once set is read only. This is a system field and should never be visible.</description>
        <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
        <label>Project Task Units</label>
        <picklist>
            <picklistValues>
                <fullName>Estimated Hours</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Duration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calendar Allocation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>project_cloud__Work_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>L/U Relationship to the Work Type of this Project Task</description>
        <inlineHelpText>The primary work type associated with this project task. The value selected here will be used for the base capability in resource searching and allocating later</inlineHelpText>
        <label>Work Type</label>
        <referenceTo>project_cloud__Work_Type__c</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Worked_Hours__c</fullName>
        <description>This represents the total number of hours completed against the project task using Work records where Record Type = Time Entry.  This field is calculated by the trigger Work Configuration.
All non-admin users should have READ ONLY access to this field.</description>
        <inlineHelpText>This represents the total number of hours completed against the Project Task.</inlineHelpText>
        <label>Entered Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Working_Total__c</fullName>
        <description>Total number of working days on a given project task.  This is a system field used for resourcing calculations and should not be visible to the user.</description>
        <label>Working Days Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Working__c</fullName>
        <description>A count of all the working days making it easier to calculate the non working days in code. And saving script statements getting the count for each task. This is a system field and should never be visible.</description>
        <formula>/*count of all the working days making it easier to calculate the non working days in code.*/
/*Is also for saving script statements getting the count for each task in code*/
IF(project_cloud__IsWorking_Monday__c, 1, 0) +
IF(project_cloud__IsWorking_Tuesday__c, 1, 0) +
IF(project_cloud__IsWorking_Wednesday__c, 1, 0) +
IF(project_cloud__IsWorking_Thursday__c, 1, 0) +
IF(project_cloud__IsWorking_Friday__c, 1, 0) +
IF(project_cloud__IsWorking_Saturday__c, 1, 0) +
IF(project_cloud__IsWorking_Sunday__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
        <label>Working Days in a Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Task</label>
    <listViews>
        <fullName>project_cloud__All_Project_Tasks</fullName>
        <columns>NAME</columns>
        <columns>project_cloud__Work_Type__c</columns>
        <columns>project_cloud__Estimated_Hours__c</columns>
        <columns>project_cloud__Status__c</columns>
        <columns>project_cloud__Completed_Percent__c</columns>
        <columns>project_cloud__IsComplete__c</columns>
        <columns>project_cloud__Autonomous_Start__c</columns>
        <columns>project_cloud__Directs__c</columns>
        <columns>project_cloud__Start__c</columns>
        <columns>project_cloud__End__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>project_cloud__Completed_Task_Locked</fullName>
        <active>true</active>
        <description>Once a Project Task has been marked as completed, the input fields on the task cannot be changed. i.e the dates on the task as finalised</description>
        <errorConditionFormula>NOT(ISCHANGED(project_cloud__IsComplete__c)) &amp;&amp; project_cloud__IsComplete__c &amp;&amp; 
(
ISCHANGED(project_cloud__Estimated_Hours__c) || 
ISCHANGED(project_cloud__Completed_Percent__c) || 
ISCHANGED(project_cloud__Autonomous_Start__c) || 
ISCHANGED(project_cloud__Minimum_End__c) || 
ISCHANGED(project_cloud__Hours_In_Day__c) || 
ISCHANGED(project_cloud__Hours_Block__c)
)</errorConditionFormula>
        <errorMessage>This Project Task has been marked as Completed, dates can no longer be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Duration_Required</fullName>
        <active>true</active>
        <description>When the Project Units are &quot;Duration&quot; the Duration field is required</description>
        <errorConditionFormula>/*Unless the Units value is &quot;Duration&quot; the Duration is required*/
ISPICKVAL(project_cloud__Units__c, &quot;Duration&quot;) &amp;&amp; (ISBLANK(project_cloud__Duration__c) || project_cloud__Duration__c &lt; 0)</errorConditionFormula>
        <errorDisplayField>project_cloud__Duration__c</errorDisplayField>
        <errorMessage>The Units for this Project Task require a Duration value to be defined</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Estimated_Hours_Required</fullName>
        <active>true</active>
        <description>When the Project Units are &quot;Calendar Allocations&quot; or &quot;Estimated Hours&quot; the Estimated Hours field is required</description>
        <errorConditionFormula>/*Unless the Units value is &quot;Duration&quot; the Estimated Hours is required*/
ISBLANK(project_cloud__Estimated_Hours__c) &amp;&amp; NOT(ISPICKVAL(project_cloud__Units__c, &quot;Duration&quot;))</errorConditionFormula>
        <errorDisplayField>project_cloud__Estimated_Hours__c</errorDisplayField>
        <errorMessage>The Units for this Project Task require an Estimated Hours value to be defined</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Health_Change_Requires_Reason</fullName>
        <active>true</active>
        <description>If the Health of a Project Task is changed, the reason field must be changed to explain why.</description>
        <errorConditionFormula>ISCHANGED(project_cloud__Health__c)
 &amp;&amp; (
	NOT(ISCHANGED(project_cloud__Health_Reason__c)) ||
	ISBLANK(project_cloud__Health_Reason__c)
)</errorConditionFormula>
        <errorDisplayField>project_cloud__Health_Reason__c</errorDisplayField>
        <errorMessage>When the Health is changed a reason must be given</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Hour_Valid_Blocks</fullName>
        <active>true</active>
        <description>Ensure that the hours entered are a multiple of Hours_Block__c value. This ensures time is entered in valid time blocks</description>
        <errorConditionFormula>(
project_cloud__Estimated_Hours__c &lt;= 0 ||
MOD(project_cloud__Estimated_Hours__c, project_cloud__Hours_Block__c) != 0
)
/*This validation rule only applies to Estimated Hours and Calendar Allocation Project Tasks*/
 &amp;&amp; NOT(ISPICKVAL(project_cloud__Units__c, &quot;Duration&quot;))</errorConditionFormula>
        <errorDisplayField>project_cloud__Estimated_Hours__c</errorDisplayField>
        <errorMessage>Estimated Hours must be a minimum of 1 and a whole number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Start_Date_Is_Working_Day</fullName>
        <active>true</active>
        <description>The start date of a project task cannot be a Non Working day</description>
        <errorConditionFormula>(MOD(project_cloud__Autonomous_Start__c - DATE(1900, 1, 7), 7) = 0 &amp;&amp; NOT(project_cloud__IsWorking_Sunday__c)) ||
(MOD(project_cloud__Autonomous_Start__c - DATE(1900, 1, 7), 7) = 1 &amp;&amp; NOT(project_cloud__IsWorking_Monday__c)) ||
(MOD(project_cloud__Autonomous_Start__c - DATE(1900, 1, 7), 7) = 2 &amp;&amp; NOT(project_cloud__IsWorking_Tuesday__c)) ||
(MOD(project_cloud__Autonomous_Start__c - DATE(1900, 1, 7), 7) = 3 &amp;&amp; NOT(project_cloud__IsWorking_Wednesday__c)) ||
(MOD(project_cloud__Autonomous_Start__c - DATE(1900, 1, 7), 7) = 4 &amp;&amp; NOT(project_cloud__IsWorking_Thursday__c)) ||
(MOD(project_cloud__Autonomous_Start__c - DATE(1900, 1, 7), 7) = 5 &amp;&amp; NOT(project_cloud__IsWorking_Friday__c)) ||
(MOD(project_cloud__Autonomous_Start__c - DATE(1900, 1, 7), 7) = 6 &amp;&amp; NOT(project_cloud__IsWorking_Saturday__c))</errorConditionFormula>
        <errorDisplayField>project_cloud__Autonomous_Start__c</errorDisplayField>
        <errorMessage>Cannot Start Before Date must be a Working Day</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Units_Cannot_Be_Changed</fullName>
        <active>true</active>
        <description>Once the Project Units have been defined they are not able to be changed. This is to prevent massive recalculations on all tasks when the value is changed</description>
        <errorConditionFormula>(
	ISPICKVAL(project_cloud__Units__c, &apos;&apos;) ||
	ISCHANGED(project_cloud__Units__c)
) &amp;&amp; (
	/*Special Cases for when the migration helper updates the values*/ 
	NOT(ISPICKVAL(PRIORVALUE(project_cloud__Units__c), &quot;Fixed Duration&quot;)) ||
	NOT(ISPICKVAL(PRIORVALUE(project_cloud__Units__c), &quot;Fixed Work&quot;))
)</errorConditionFormula>
        <errorDisplayField>project_cloud__Units__c</errorDisplayField>
        <errorMessage>This value is set at the time of project creation and cannot be changed. If you wish to change units you will need to clone the project and set the units to what you require at the time of project creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Working_Days_Read_Only</fullName>
        <active>true</active>
        <description>The working days checkboxes are read only, once they are set when the project is created they cannot be modified.</description>
        <errorConditionFormula>ISCHANGED(project_cloud__IsWorking_Monday__c) || 
ISCHANGED(project_cloud__IsWorking_Tuesday__c) || 
ISCHANGED(project_cloud__IsWorking_Wednesday__c) || 
ISCHANGED(project_cloud__IsWorking_Thursday__c) || 
ISCHANGED(project_cloud__IsWorking_Friday__c) || 
ISCHANGED(project_cloud__IsWorking_Saturday__c) || 
ISCHANGED(project_cloud__IsWorking_Sunday__c)</errorConditionFormula>
        <errorMessage>The Working Days cannot be changed. Once set they are read only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Working_Hours_Set</fullName>
        <active>true</active>
        <description>This validation rule prevents tasks being saved when there is no hours in day, hours block or working days defined. The length of a task cannot be calculated without these values</description>
        <errorConditionFormula>NOT(project_cloud__Hours_In_Day__c &gt; 0) ||
NOT(project_cloud__Hours_Block__c &gt; 0) ||
(
NOT(project_cloud__IsWorking_Monday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Tuesday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Wednesday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Thursday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Friday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Saturday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Sunday__c)
)</errorConditionFormula>
        <errorMessage>Hours In Day and Hours Block needs to be greater than 0, and at least one Working Day needs to be selected</errorMessage>
    </validationRules>
</CustomObject>